Document api endpoints
