# app/Http/Controllers/Controller.php
@@ -7,36 +7,41 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
-/**
- * @OA\Info(title="My First API", version="0.1")
- */
-class Controller extends BaseController
-{
-    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
-
-    /**
+ /**
      * @OA\Info(
      *      version="1.0.0",
-     *      title="Laravel OpenApi Demo Documentation",
-     *      description="L5 Swagger OpenApi description",
+     *      title="Beachcomber Api Documentation",
+     *      description="How to use Beachcomber Api",
+     *      @OA\SecurityScheme(
+     *          securityScheme="bearerAuth",
+     *          in="header",
+     *          name="bearerAuth",
+     *          type="http",
+     *          scheme="bearer",
+     *          bearerFormat="JWT",
+     *      ),
      *      @OA\Contact(
-     *          email="admin@admin.com"
+     *          name="Beachcomber",
+     *          email="mauricia@beachcomber.com",
      *      ),
      *      @OA\License(
-     *          name="Apache 2.0",
-     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+     *          name="Terms and Condition",
+     *          url="https://www.beachcomber-hotels.com/fr/terms-conditions",
      *      )
      * )
      *
      * @OA\Server(
      *      url=L5_SWAGGER_CONST_HOST,
-     *      description="Demo API Server"
-     * )
-
+     *      description="Local API Server"
+     * ),
      *
      * @OA\Tag(
-     *     name="Projects",
-     *     description="API Endpoints of Projects"
+     *     name="Authentification",
+     *     description="API Endpoints of Authentification"
      * )
      */
+
+class Controller extends BaseController
+{
+    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
 }
